html basics + movie ranking project

--- a/beginner/56-HTML-basics.html
+++ b/beginner/56-HTML-basics.html
@@ -37,3 +37,15 @@ faucibus vitae aliquet nec ullamcorper. Nunc mattis enim ut tellus elementum sag
 fermentum et sollicitudin. Pellentesque habitant morbi tristique senectus. Tristique senectus et netus et. Turpis
 egestas sed tempus urna et pharetra pharetra. Feugiat vivamus at augue eget arcu dictum varius duis at. Lacus sed
 viverra tellus in hac habitasse platea dictumst vestibulum. Nisl condimentum id venenatis a condimentum vitae sapien.</p>
+
+
+<!-- Movie Ranking Project -->
+<h1>The Best Movies According to Angela</h1>
+<h2>My top 3 movies of all-time.</h2>
+<hr />
+<h3>Spirited Away</h3>
+<p>This is my favourite anime. I love the beautiful images.</p>
+<h3>Ex Machina</h3>
+<p>Really cool sci-fi movie.</p>
+<h3>Drive</h3>
+<p>Super beautiful film. Really artistic.</p>
