--- a/advanced/82-blog-homepage/83-html-form-revision/index.html
+++ b/advanced/82-blog-homepage/83-html-form-revision/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Html Form</title>
+    <title>Title</title>
 </head>
 <body>
-    <form>
+    <form action="/login" method="post">
         <label>Name</label>
-        <input type="text" placeholder="name">
+        <input type="text" placeholder="name" name="username">
         <label>Password</label>
-        <input type="text" placeholder="password">
+        <input type="text" placeholder="password" name="password">
         <button type="submit">Ok</button>
     </form>
 </body>
